Add temperature sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,15 @@
 [platformio]
 default_envs = nodemcuv2
 
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+lib_deps =
+  paulstoffregen/OneWire
+  milesburton/DallasTemperature
 
 # Recommended by ChatGPT for ESP32 development
 [env:esp32]
