Changes to support esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = nodemcuv2
+; default_envs = nodemcuv2
+default_envs = esp32
 
 
 [env:nodemcuv2]
@@ -27,4 +28,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps =
+  paulstoffregen/OneWire
+  milesburton/DallasTemperature
 
